# chess-bot-arena

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/chess_arena/: __init__.py  bot.py  cli.py  registry.py  uci.py
src/chess_arena/bots/: minimax.py  random_bot.py
tests/: test_bots.py
tournament/: run.py  standings.py
